--- a/main.css
+++ b/main.css
@@ -22,28 +22,44 @@ body {
 
 #correct-box {
     background-color: rgb(63, 226, 90);
+    color:black;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 #incorrect-box {
     background-color: rgb(196, 62, 62);
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     color:black;
     font-size: 20pt;
 }
 
 .result {
     color: black;
-    font-size: 50pt;
+    font-size: 60pt;
     font-weight: bold;
+    margin: 1em;
 }
 
-.next-button {
-    background-color: #555;
+.continue-button {
+    width: fit-content;
+    font-size: 25pt;
+    padding: 0.5em;
+    margin: 1em auto;
+    border-radius: 1em;
+    border: 0.2em solid black;
+}
+
+.continue-button:hover {
+    cursor: pointer;
+    background-color: #ffffff33;
+}
+
+.continue-button:active {
+    background-color: #ffffff66;
 }
 
 #question-text {
